--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.13.3",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "react-router": "^4.2.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0"
   }
