--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "react-router": "^3.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0"
   }
