--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router": "^3.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0"
   }
