--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.13.3",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "normalizr": "^3.2.3",
     "react-router": "^3.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
